--- a/src/templates/partials/_projects.html
+++ b/src/templates/partials/_projects.html
@@ -5,51 +5,51 @@
         <div class="projects__block">
             <figure class="projects__img--1">
 
-                <object class="projects__img" type="image/svg+xml" data="img/svg/technical_aid.svg" height="135px">Your browser does not support SVGs</object>
+                <object class="projects__img" type="image/svg+xml" data="img/svg/technical_aid.svg">Your browser does not support SVGs</object>
                 <figcaption class="projects__caption">
                     <a href="#" class="projects__link">TECHNICAL AID</a>
                 </figcaption>
             </figure>
             <figure>
-                <img class="projects__img" src="img/svg/secure_access.svg" alt="SECURE ACCES">
-                <figcaption class="projects__caption">
-                    <a href="#" class="projects__link">SECURE ACCES</a>
+                <object class="projects__img" type="image/svg+xml" data="img/svg/secure_access.svg">SECURE ACCES</object>
+                <figcaption class="projects__caption ">
+                    <a href="# " class="projects__link ">SECURE ACCES</a>
                 </figcaption>
             </figure>
             <figure>
-                <img class="projects__img" src="img/svg/market_research.svg" alt="MARKET RESEARCH">
-                <figcaption class="projects__caption">
-                    <a href="#" class="projects__link">MARKET RESEARCH</a>
+                <object class="projects__img" type="image/svg+xml" data="img/svg/market_research.svg">MARKET RESEARCH</object>
+                <figcaption class="projects__caption ">
+                    <a href="# " class="projects__link ">MARKET RESEARCH</a>
                 </figcaption>
             </figure>
             <figure>
-                <img class="projects__img" src="img/svg/credit.svg" alt="CREDIT">
-                <figcaption class="projects__caption">
-                    <a href="#" class="projects__link">CREDIT</a>
+                <object class="projects__img" type="image/svg+xml" data="img/svg/credit.svg">CREDIT</object>
+                <figcaption class="projects__caption ">
+                    <a href="# " class="projects__link ">CREDIT</a>
                 </figcaption>
             </figure>
             <figure>
-                <img class="projects__img" src="img/svg/targetting.svg" alt="TARGETING">
-                <figcaption class="projects__caption">
-                    <a href="#" class="projects__link">TARGETING</a>
+                <object class="projects__img" type="image/svg+xml" data="img/svg/targetting.svg">TARGETING</object>
+                <figcaption class="projects__caption ">
+                    <a href="# " class="projects__link ">TARGETING</a>
                 </figcaption>
             </figure>
             <figure>
-                <img class="projects__img" src="img/svg/insurance.svg" alt="INSURANCE">
-                <figcaption class="projects__caption">
-                    <a href="#" class="projects__link">INSURANCE</a>
+                <object class="projects__img" type="image/svg+xml" data="img/svg/insurance.svg">INSURANCE</object>
+                <figcaption class="projects__caption ">
+                    <a href="# " class="projects__link ">INSURANCE</a>
                 </figcaption>
             </figure>
             <figure>
-                <img class="projects__img" src="img/svg/ecommerce.svg" alt="ECOMERSE">
-                <figcaption class="projects__caption">
-                    <a href="#" class="projects__link">ECOMERSE</a>
+                <object class="projects__img" type="image/svg+xml" data="img/svg/ecommerce.svg">ECOMERSE</object>
+                <figcaption class="projects__caption ">
+                    <a href="# " class="projects__link ">ECOMERSE</a>
                 </figcaption>
             </figure>
             <figure>
-                <img class="projects__img" src="img/svg/office.svg" alt="OFFICE">
-                <figcaption class="projects__caption">
-                    <a href="#" class="projects__link">OFFICE</a>
+                <object class="projects__img" type="image/svg+xml" data="img/svg/office.svg">OFFICE</object>
+                <figcaption class="projects__caption ">
+                    <a href="# " class="projects__link ">OFFICE</a>
                 </figcaption>
             </figure>
         </div>
