--- a/src/templates/partials/_projects.html
+++ b/src/templates/partials/_projects.html
@@ -3,13 +3,16 @@
         <h2 class="projects__name section-name section-name--mw446 section-name--arrow-r">OUR BUSINESS RELATED PROJECTS</h2>
 
         <div class="projects__block">
-            <figure class="projects__img--1">
-
-                <object class="projects__img" type="image/svg+xml" data="img/svg/technical_aid.svg">Your browser does not support SVGs</object>
-                <figcaption class="projects__caption">
-                    <a href="#" class="projects__link">TECHNICAL AID</a>
-                </figcaption>
-            </figure>
+            <a href="#" class="projects__link">
+                <figure class="projects__img--1">
+                    <a href="#" class="projects__link">
+                        <object class="projects__img" type="image/svg+xml" data="img/svg/technical_aid.svg">Your browser does not support SVGs</object>
+                        <figcaption class="projects__caption">
+                            <span>TECHNICAL AID</span>
+                        </figcaption>
+                    </a>
+                </figure>
+            </a>
             <figure>
                 <object class="projects__img" type="image/svg+xml" data="img/svg/secure_access.svg">SECURE ACCES</object>
                 <figcaption class="projects__caption ">
