--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -17,11 +17,10 @@
 
 <body>
 
-{% block content %} {% endblock %} {#
-<script src="js/main.js"></script>
-#}
+{% block content %} {% endblock %}
 
-<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-<script>AOS.init();</script>
+<script src="./scripts/_AOSconfig.js"></script>
+<script src="./scripts/aos.js"></script>
+
 </body>
 </html>
