--- a/src/templates/partials/_services.html
+++ b/src/templates/partials/_services.html
@@ -1,5 +1,7 @@
 <section class="services">
+    <a href="javascript:" id="return-to-top"><i class="icon-chevron-up"></i></a>
     <div class="container services__container" data-aos="fade-right">
+
         <h2 class="section-name section-name--mw330 section-name--arrow-r">what we do</h2>
         <div class="services__block">
             <img class="services__image services__size" src="img/png/macbook_1.png">
