--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -16,7 +16,7 @@
     margin-bottom: 145px;
     margin-left: 50%;
     border-radius: 2px;
-    transform: translateX(-50%); //padding: 13px 14px; //duplicate, remove
+    transform: translateX(-50%);
     box-shadow: $h2-box-shadow;
     &--mw330 {
         min-width: 330px;
@@ -139,7 +139,7 @@
         content: "";
         height: 100%;
         width: 27px;
-        background: url("../img/png/send.png") no-repeat center; //optimized
+        background: url("../img/png/send.png") no-repeat center;
     }
 }
 
