paddings and margins fixes

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -103,7 +103,7 @@ section-name + section-name--mw220 или section-name--mw330 */
   font-size: 12px;
   font-weight: $font-weight-700;
   font-family: $buttons-font-family;
-  margin-top: 15px;
+//   margin-top: 15px;
 
   &:hover {
     animation: shake 1.5s cubic-bezier(.36, .07, .19, .97) infinite;
