--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -19,7 +19,7 @@
 
 {% block content %} {% endblock %}
 
-<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script src="./scripts/_AOSconfig.js"></script>
 <script src="./scripts/aos.js"></script>
 
 </body>
