--- a/src/scss/_team.scss
+++ b/src/scss/_team.scss
@@ -12,6 +12,9 @@
     &__member {
         padding: 0 23px;
         width: 171px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         &:hover {
             transform: scale(1.2);
         }
@@ -41,15 +44,15 @@
     }
 }
 
-@media screen and (min-width:320px) and (max-width:479px) {
+@media screen and (max-width:479px) {
     /* Target portrait smartphones */
     .team {
         &__wrapper {
-            padding: 10px;
+            padding: 20px;
         }
         &__member {
             width: 50%;
-            padding: 0 10px;
+            padding: 10px;
         }
     }
 }
