--- a/src/scss/_services.scss
+++ b/src/scss/_services.scss
@@ -34,7 +34,7 @@
   &__header {
     font-weight: $font-weight-700;
     font-size: $h3-font-size;
-    line-hight: 1;
+    line-height: 1;
     color: $h3-font-color;
     text-transform: uppercase;
   }
