--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -75,45 +75,45 @@
 }
 
 .yellow-btn {
-  text-transform: uppercase;
-  background-color: $color-mainYellow;
-  appearance: none;
-  border: 0;
-  white-space: nowrap;
-  user-select: none;
-  text-decoration: none;
-  border-radius: 2px;
-  box-shadow: 1px 2px 4.75px 0.25px rgba(0, 0, 0, 0.25);
-  color: #3a3a3a;
-  padding: 20px 40px;
-  font-size: 12px;
-  font-weight: $font-weight-700;
-  font-family: $buttons-font-family;
-//   margin-top: 15px;
-
-  &:hover {
-    animation: shake 1.5s cubic-bezier(.36, .07, .19, .97) infinite;
-    transform: translate3d(0, 0, 0);
-    backface-visibility: hidden;
-    perspective: 1000px;
-    cursor: pointer;
-
-    @keyframes shake {
-      10%, 90% {
-        transform: translate3d(-1px, 0, 0);
-      }
-
-      20%, 80% {
-        transform: translate3d(2px, 0, 0);
-      }
-
-      30%, 50%, 70% {
-        transform: translate3d(-4px, 0, 0);
-      }
-
-      40%, 60% {
-        transform: translate3d(4px, 0, 0);
-      }
+    text-transform: uppercase;
+    background-color: $color-mainYellow;
+    appearance: none;
+    border: 0;
+    white-space: nowrap;
+    user-select: none;
+    text-decoration: none;
+    border-radius: 2px;
+    box-shadow: 1px 2px 4.75px 0.25px rgba(0, 0, 0, 0.25);
+    color: #3a3a3a;
+    padding: 20px 40px;
+    font-size: 12px;
+    font-weight: $font-weight-700;
+    font-family: $buttons-font-family; //   margin-top: 15px;
+    &:hover {
+        animation: shake 1.5s cubic-bezier(.36, .07, .19, .97) infinite;
+        transform: translate3d(0, 0, 0);
+        backface-visibility: hidden;
+        perspective: 1000px;
+        cursor: pointer;
+        @keyframes shake {
+            10%,
+            90% {
+                transform: translate3d(-1px, 0, 0);
+            }
+            20%,
+            80% {
+                transform: translate3d(2px, 0, 0);
+            }
+            30%,
+            50%,
+            70% {
+                transform: translate3d(-4px, 0, 0);
+            }
+            40%,
+            60% {
+                transform: translate3d(4px, 0, 0);
+            }
+        }
     }
 }
 
