--- a/src/scss/_support.scss
+++ b/src/scss/_support.scss
@@ -10,6 +10,6 @@
         font-size: $p-font-size;
         line-height: 28px;
         text-align: left;
-        padding: 10px 5px 5px 5px;
+        padding: 0 5px 15px 5px;
     }
 }
