change for all sections aos to fade-up

--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" data-aos="fade-up">
     <div class="container container--footer">
         <div class="footer-inner">
             <nav class="footer-inner__menu">
