--- a/src/templates/partials/_packages.html
+++ b/src/templates/partials/_packages.html
@@ -1,5 +1,5 @@
 <section class="packages">
-    <div class="container" data-aos="fade-up-right">
+    <div class="container" data-aos="fade-up">
         <h2 class="section-name section-name--mw330  section-name--arrow-l">OUR PACKAGES</h2>
         <div class="packages__table">
             <div class="packages__coll">
