--- a/src/templates/partials/_projects.html
+++ b/src/templates/partials/_projects.html
@@ -1,5 +1,5 @@
 <section class="projects">
-    <div class="container" data-aos="fade-up-left">
+    <div class="container" data-aos="fade-up">
         <h2 class="projects__name section-name section-name--mw446 section-name--arrow-r">OUR BUSINESS RELATED PROJECTS</h2>
         <div class="projects__block">
             <figure class="projects__figure">
