--- a/src/templates/partials/_features.html
+++ b/src/templates/partials/_features.html
@@ -1,5 +1,5 @@
 <section class="features">
-    <div class="container features__container" data-aos="fade-right">
+    <div class="container features__container" data-aos="fade-up">
         <h2 class="features__heading section-name section-name--mw330  section-name--arrow-r">our features</h2>
         <div class="features__content">
             <div class="features__section">
