--- a/src/templates/partials/_services.html
+++ b/src/templates/partials/_services.html
@@ -3,7 +3,7 @@
         <!-- <i class="icon-chevron-up"></i> -->
         <i class="fas fa-chevron-up"></i>
     </a>
-    <div class="container services__container" data-aos="fade-right">
+    <div class="container services__container" data-aos="fade-up">
 
         <h2 class="section-name section-name--mw330 section-name--arrow-r">what we do</h2>
         <div class="services__block">
