--- a/src/templates/partials/_team.html
+++ b/src/templates/partials/_team.html
@@ -1,9 +1,9 @@
-<section class="team screen-width">
+<section class="team screen-width" data-aos="fade-up">
     <h2 class="team__name section-name section-name--mw446  section-name--arrow-l">OUR TEAM MEMBERS</h2>
     <div class="screen-width brand-yellow">
         <div class="team__wrapper container">
             <figure class="team__member">
-                <img class="team__img" data-aos="" src="img/svg/team1.svg" alt="Foto of member">
+                <img class="team__img" src="img/svg/team1.svg" alt="Foto of member">
                 <figcaption class="member">
                     <h3 class="member__name">SYED MIRAJ</h3>
                     <p class="member__position">UI & UX DESINER</p>
