--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -11,13 +11,13 @@
 
         <nav class="nav">
             <ul class="nav__block">
-                <li class="nav__element"><a class="nav__link" href="#">home</a></li>
-                <li class="nav__element"><a class="nav__link" href="#">services</a></li>
-                <li class="nav__element"><a class="nav__link" href="#">about</a></li>
-                <li class="nav__element"><a class="nav__link" href="#">portfolio</a></li>
-                <li class="nav__element"><a class="nav__link" href="#">academic</a></li>
-                <li class="nav__element"><a class="nav__link" href="#">blog</a></li>
-                <li class="nav__element"><a class="nav__link" href="#">contact us</a><br/>
+                <li class="nav__element"><a class="nav__link nav__link--decorated" href="#">home</a></li>
+                <li class="nav__element"><a class="nav__link nav__link--decorated" href="#">services</a></li>
+                <li class="nav__element"><a class="nav__link nav__link--decorated" href="#">about</a></li>
+                <li class="nav__element"><a class="nav__link nav__link--decorated" href="#">portfolio</a></li>
+                <li class="nav__element"><a class="nav__link nav__link--decorated" href="#">academic</a></li>
+                <li class="nav__element"><a class="nav__link nav__link--decorated" href="#">blog</a></li>
+                <li class="nav__element"><a class="nav__link nav__link--decorated" href="#">contact us</a><br/>
                     <a class="nav__link nav__link--centered" href='tel:#'>(+966-322 322)</a></li>
             </ul>
         </nav>
