--- a/src/scss/_features.scss
+++ b/src/scss/_features.scss
@@ -1,67 +1,84 @@
 @import "variables";
-
 .features {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 3em;
-  &__container {
-    justify-content: center;
-  }
-  &__content {
     display: flex;
-    flex-wrap: wrap;
-  }
-  &__heading {
-    text-transform: uppercase;
-  }
-  //&__heading {
-  //  font-size: $h2-font-size;
-  //  font-family: $h2-font-family;
-  //  font-weight: $h2-font-weight;
-  //  color: $h2-font-color;
-  //  width: 100%;
-  //  height: 2em;
-  //  text-transform: uppercase;
-  //  vertical-align: middle;
-  //  box-shadow: $h2-box-shadow;
-  //  margin: 2em 20em;
-  //  flex-grow: 3;
-  //  text-align: center;
-  //  border: 1px solid $h2-bg-color;
-  //  background-color: $h2-bg-color;
-  //  display: flex;
-  //  justify-content: center;
-  //  align-items: center;
-  //
-  //  //display: block;
-  //}
-  &__section {
-    display: flex;
-    justify-content: space-between;
-    padding: 1em;
-    flex-grow: 1;
-    width: 30%;
-    //height: 100px;
-    margin: 1em;
-    transition: background-color 1s ease;
-    &:hover {
-      background-color: $color-mainYellow;
-    .features__img{
-      filter: invert(1);
+    flex-wrap: wrap; // margin: 3em;
+    &__container {
+        justify-content: center;
     }
-
+    &__content {
+        display: flex;
+        flex-wrap: wrap;
+    } // &__heading {
+    //   text-transform: uppercase;
+    // }
+    //&__heading {
+    //  font-size: $h2-font-size;
+    //  font-family: $h2-font-family;
+    //  font-weight: $h2-font-weight;
+    //  color: $h2-font-color;
+    //  width: 100%;
+    //  height: 2em;
+    //  text-transform: uppercase;
+    //  vertical-align: middle;
+    //  box-shadow: $h2-box-shadow;
+    //  margin: 2em 20em;
+    //  flex-grow: 3;
+    //  text-align: center;
+    //  border: 1px solid $h2-bg-color;
+    //  background-color: $h2-bg-color;
+    //  display: flex;
+    //  justify-content: center;
+    //  align-items: center;
+    //
+    //  //display: block;
+    //}
+    &__section {
+        display: flex;
+        justify-content: space-between;
+        padding: 1em;
+        flex-grow: 1;
+        min-width: 250px;
+        max-width: 320px;
+        margin: 10px auto;
+        transition: background-color 1s ease;
+        &:hover {
+            background-color: $color-mainYellow;
+            .features__img {
+                filter: invert(1);
+            }
+        }
     }
-  }
-  &__img {
-    width: 35px;
-    height: 23px;
-    //fill: #000099;
-  }
+    &__head {
+        font-size: 18px;
+        line-height: 25px;
+    }
+    &__img {
+        width: 45px;
+        padding-right: 8px;
+        max-height: 36px; //fill: #000099;
+    }
+    &__paragraph {
+        font-weight: $p-font-weight; // font-size: $p-font-size;
+        font-size: 14px;
+        color: $p-font-color; // line-height: $p-line-height;
+        line-height: 25px;
+    }
+}
 
-  &__paragraph {
-    font-weight: $p-font-weight;
-    font-size: $p-font-size;
-    color: $p-font-color;
-    line-height: $p-line-height;
-  }
+@media (max-width: 959px) {
+  .features {
+    &__section {
+      max-width: calc(50vw - 20px);}}
+}
+@media (max-width: 600px) {
+    .features {
+        &__section {
+          max-width: 100vw;
+          margin: 0;
+          padding: 10px 20px;
+        }
+        &__paragraph {
+          line-height: 20px;
+        }
+    }
 }
