--- a/src/scss/_services.scss
+++ b/src/scss/_services.scss
@@ -6,12 +6,7 @@
     justify-content: space-around;
     padding: 3em 0;
     margin-top: 2em;
-    //flex-direction: row;
     height: 100%;
-    //&--reverse{
-    //  display: flex;
-    //  flex-direction: column-reverse;
-    //}
   }
 
   &__size {
@@ -20,12 +15,10 @@
 
   &__image {
     width: 40%;
-    //height: 100%;
   }
 
   &__content {
     display: flex;
-    //height: 100%;
     width: 40%;
     flex-direction: column;
   }
@@ -62,7 +55,13 @@
   text-decoration: none;
   border-radius: 35px;
   transition: all 0.3s ease;
+  box-shadow: 0 0 0 0 rgba(255, 192, 56, 0.7);
+
+  animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
 }
+
+@keyframes pulse {to {box-shadow: 0 0 0 45px rgba(255, 192, 56, 0);}}
+
 #return-to-top i {
   color: #fff;
   margin: 0;
@@ -72,40 +71,13 @@
   font-size: 19px;
   transition: all 0.3s ease;
 }
-#return-to-top:hover {
 
+#return-to-top:hover {
   background: $color-mainYellow;
   opacity: 0.9;
 }
+
 #return-to-top:hover i {
   color: #fff;
   top: 5px;
 }
-
-//@mixin center-v () {
-//  position: fixed;
-//  top: 0;
-//  bottom: 0;
-//  margin: auto;
-//}
-//.item {
-//  width: 10%;
-//  height: 10%;
-//  //margin: 50px auto;
-//  //padding-bottom: 10px;
-//  background: #ccc;
-//  text-align: center;
-//  color: #FFF;
-//  font-size: 3em;
-//
-//  span {
-//    display: block;
-//    font-size: 1rem;
-//  }
-//
-//  &--secondary {
-//    @include center-v;
-//    left: 20px;
-//    background: red;
-//  }
-//}
