change svg to gif and add hover closes #109

--- a/src/scss/_history.scss
+++ b/src/scss/_history.scss
@@ -21,8 +21,20 @@
         padding-left: 20px;
     }
     &__image {
-        height: 100%;
-        width: 100%;
+        position: relative; // height: 100%;
+        &--background {
+            width: 100%;
+        }
+        &--hover {
+            visibility: hidden;
+            position: absolute;
+            width: 108px;
+            top: 121px;
+            left: 206px;
+        }
+        &:hover &--hover {
+            visibility: visible;
+        }
     }
     &__title {
         &--no-space {
