--- a/src/templates/partials/_history.html
+++ b/src/templates/partials/_history.html
@@ -1,7 +1,10 @@
 <section class="history">
     <div class="container history__container" data-aos="fade-up">
         <div class="history__left">
-            <img class="history__image" src="img/svg/happy_clerk.svg">
+            <div class="history__image">
+                <img class="history__image--background" src="img/png/happy_clerk.gif">
+                <img class="history__image--hover" src="img/svg/happy_clerk_lamp.svg">
+            </div>
         </div>
 
         <div class="history__right">
@@ -15,7 +18,8 @@
 
                 Duis a purus odio. Curabitur commodo iaculis egestas. Suspendisse viverra tellus at placerat
                 condimentum. Nam ac malesuada metus. Nam at accumsan nulla, vestibulum elementum ipsum. Suspendisse
-                blandit sed libero ac efficitur. Proin interdum rhoncus elit, vel placerat dui accumsan at. Pellentesque
+                blandit sed libero ac efficitur. Proin interdum rhoncus elit, vel placerat dui accumsan at.
+                Pellentesque
                 lacus augue, volutpat quis porttitor a, placerat in lacus.
             </p>
 
