--- a/src/templates/partials/_projects.html
+++ b/src/templates/partials/_projects.html
@@ -2,54 +2,70 @@
     <div class="container" data-aos="fade-up">
         <h2 class="projects__name section-name section-name--mw446 section-name--arrow-r">OUR BUSINESS RELATED PROJECTS</h2>
         <div class="projects__block">
-            <figure class="projects__figure">
-                <object class="projects__img" type="image/svg+xml" data="img/svg/technical_aid.svg">Your browser does not support SVGs</object>
-                <figcaption class="projects__caption">
-                    <a href="# " class="projects__link ">TECHNICAL AID</a>
-                </figcaption>
-            </figure>
-            <figure class="projects__figure">
-                <object class="projects__img" type="image/svg+xml" data="img/svg/secure_access.svg">SECURE ACCES</object>
-                <figcaption class="projects__caption ">
-                    <a href="# " class="projects__link ">SECURE ACCES</a>
-                </figcaption>
-            </figure>
-            <figure class="projects__figure">
-                <object class="projects__img" type="image/svg+xml" data="img/svg/market_research.svg">MARKET RESEARCH</object>
-                <figcaption class="projects__caption ">
-                    <a href="# " class="projects__link ">MARKET RESEARCH</a>
-                </figcaption>
-            </figure>
-            <figure class="projects__figure">
-                <object class="projects__img" type="image/svg+xml" data="img/svg/credit.svg">CREDIT</object>
-                <figcaption class="projects__caption ">
-                    <a href="# " class="projects__link ">CREDIT</a>
-                </figcaption>
-            </figure>
-            <figure class="projects__figure">
-                <object class="projects__img" type="image/svg+xml" data="img/svg/targetting.svg">TARGETING</object>
-                <figcaption class="projects__caption ">
-                    <a href="# " class="projects__link ">TARGETING</a>
-                </figcaption>
-            </figure class="projects__figure">
-            <figure class="projects__figure">
-                <object class="projects__img" type="image/svg+xml" data="img/svg/insurance.svg">INSURANCE</object>
-                <figcaption class="projects__caption ">
-                    <a href="# " class="projects__link ">INSURANCE</a>
-                </figcaption>
-            </figure>
-            <figure class="projects__figure">
-                <object class="projects__img" type="image/svg+xml" data="img/svg/ecommerce.svg">ECOMERSE</object>
-                <figcaption class="projects__caption ">
-                    <a href="# " class="projects__link ">ECOMERSE</a>
-                </figcaption>
-            </figure>
-            <figure class="projects__figure">
-                <object class="projects__img" type="image/svg+xml" data="img/svg/office.svg">OFFICE</object>
-                <figcaption class="projects__caption ">
-                    <a href="# " class="projects__link ">OFFICE</a>
-                </figcaption>
-            </figure>
+            <a href="#" class="projects__link ">
+                <figure class="projects__figure">
+                    <object class="projects__img" type="image/svg+xml" data="img/svg/technical_aid.svg">Your browser does not support SVGs</object>
+                    <figcaption class="projects__caption">
+                        <p>TECHNICAL AID</p>
+                    </figcaption>
+                </figure>
+            </a>
+            <a href="#" class="projects__link ">
+                <figure class="projects__figure">
+                    <object class="projects__img" type="image/svg+xml" data="img/svg/secure_access.svg">SECURE ACCES</object>
+                    <figcaption class="projects__caption ">
+                        <p>SECURE ACCES</p>
+                    </figcaption>
+                </figure>
+            </a>
+            <a href="#" class="projects__link ">
+                <figure class="projects__figure">
+                    <object class="projects__img" type="image/svg+xml" data="img/svg/market_research.svg">MARKET RESEARCH</object>
+                    <figcaption class="projects__caption ">
+                        <p>MARKET RESEARCH</p>
+                    </figcaption>
+                </figure>
+            </a>
+            <a href="#" class="projects__link ">
+                <figure class="projects__figure">
+                    <object class="projects__img" type="image/svg+xml" data="img/svg/credit.svg">CREDIT</object>
+                    <figcaption class="projects__caption ">
+                        <p>CREDIT</p>
+                    </figcaption>
+                </figure>
+            </a>
+            <a href="#" class="projects__link ">
+                <figure class="projects__figure">
+                    <object class="projects__img" type="image/svg+xml" data="img/svg/targetting.svg">TARGETING</object>
+                    <figcaption class="projects__caption ">
+                        <p>TARGETING</p>
+                    </figcaption>
+                </figure>
+            </a>
+            <a href="#" class="projects__link ">
+                <figure class="projects__figure">
+                    <object class="projects__img" type="image/svg+xml" data="img/svg/insurance.svg">INSURANCE</object>
+                    <figcaption class="projects__caption ">
+                        <p>INSURANCE</p>
+                    </figcaption>
+                </figure>
+            </a>
+            <a href="#" class="projects__link ">
+                <figure class="projects__figure">
+                    <object class="projects__img" type="image/svg+xml" data="img/svg/ecommerce.svg">ECOMERSE</object>
+                    <figcaption class="projects__caption ">
+                        <p>ECOMERSE</p>
+                    </figcaption>
+                </figure>
+            </a>
+            <a href="#" class="projects__link ">
+                <figure class="projects__figure">
+                    <object class="projects__img" type="image/svg+xml" data="img/svg/office.svg">OFFICE</object>
+                    <figcaption class="projects__caption ">
+                        <p>OFFICE</p>
+                    </figcaption>
+                </figure>
+            </a>
         </div>
     </div>
 </section>
