modal template done

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,7 @@
 @import 'normalize';
 @import 'variables';
 @import 'general';
+@import "modal";
 @import 'container';
 @import 'buttons';
 @import 'header';
