--- a/src/templates/partials/_services.html
+++ b/src/templates/partials/_services.html
@@ -27,7 +27,7 @@
                     molestiae
                     hic!
                 </p>
-                <a href="#" class="yellow-btn services__btn">view more </a>
+                <button href="#" class="yellow-btn services__btn" id="open-button">view more </button>
             </article>
             <img class="services__image services__size" src="img/png/macbook_1.png">
 
@@ -44,6 +44,21 @@
                 </p>
                 <a href="#" class="yellow-btn services__btn">view more </a>
             </article>
+        </div>
+
+    </div>
+</section>
+
+<section id="modal-1" class="modal-container">
+
+    <div class="modal-dialog">
+        <svg class="modal-svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+            <polygon class="modal-polygon" />
+        </svg>
+
+        <div class="modal-content">
+            <h2>I'm a modal</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis excepturi ut inventore consectetur quos rerum quibusdam accusamus, labore itaque assumenda consequatur cum saepe velit quidem ipsa facilis. Repellendus, reiciendis quam?</p>
         </div>
 
     </div>
