--- a/src/templates/partials/_packages.html
+++ b/src/templates/partials/_packages.html
@@ -9,7 +9,7 @@
                     <li class="coll__li"><span class="coll__span"> e-mails</span></li>
                     <li class="coll__li"><span class="coll__span">l databases</span></li>
                     <li class="coll__li"><span class="coll__span">storage</span></li>
-                    <li class="coll__price packages--grey"><b>$5</b>/mo.</li>
+                    <li class="coll__price packages--grey"><b class="coll__price__dol">$5</b>/mo.</li>
                     <button class="coll__btn coll__btn--grey" form="">ORDER NOW</button>
                 </ul>
             </div>
@@ -20,7 +20,8 @@
                     <li class="coll__li"><span class="coll__span">40 e-mails</span></li>
                     <li class="coll__li"><span class="coll__span">20 MySql databases</span></li>
                     <li class="coll__li"><span class="coll__span">50 Gb storage</span></li>
-                    <li class="coll__price packages--red"><b>$12</b>/mo.</li>
+                    <li class="coll__price packages--red">
+                        <b class="coll__price__dol">$12</b>/mo.</li>
                     <button class="coll__btn coll__btn--red" form="">ORDER NOW</button>
                 </ul>
             </div>
@@ -31,7 +32,8 @@
                     <li class="coll__li"><span class="coll__span">50 e-mails</span></li>
                     <li class="coll__li"><span class="coll__span">40 MySql databases</span></li>
                     <li class="coll__li"><span class="coll__span">100 Gb storage</span></li>
-                    <li class="coll__price packages--yellow"><b>$19</b>/mo.</li>
+                    <li class="coll__price packages--yellow">
+                        <b class="coll__price__dol">$19</b>/mo.</li>
                     <button class="coll__btn coll__btn--yellow" form="">ORDER NOW</button>
                 </ul>
             </div>
