--- a/src/templates/partials/_modal.html
+++ b/src/templates/partials/_modal.html
@@ -13,3 +13,21 @@
 
     </div>
 </section>
+
+<div id="modal-container">
+    <div class="modal__background">
+        <div class="modal">
+            <h2 class="modal__head">Hire Us</h2>
+            <form class="modal__form">
+                <input type="email" name="email" id="email" class="modal__email" placeholder="Your email">
+                <input type="text" name="full-name" id="full-name" class="modal__name" placeholder="Your Name">
+                <input type="submit" class="modal__submit" value="send">
+            </form>
+            <button class="modal__close" id="modal__close"></button>
+            <!--<svg class="modal-svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"-->
+            <!--preserveAspectRatio="none">-->
+            <!--<rect x="0" y="0" fill="none" width="226" height="162" rx="3" ry="3"></rect>-->
+            <!--</svg>-->
+        </div>
+    </div>
+</div>c
