--- a/src/templates/partials/_hire_us.html
+++ b/src/templates/partials/_hire_us.html
@@ -4,7 +4,7 @@
             <img class="hire__img" src="img/png/hire.png">
             <div class="hire__content">
                 <h3 class="hire__h3">NEED CREATIVE WORKERS?</h3>
-                <button class="hire__button" form=""><b>HIRE US</b></button>
+                <button class="hire__button button" id="one"><b>HIRE US</b></button>
             </div>
         </div>
     </div>
