--- a/src/scss/_packages.scss
+++ b/src/scss/_packages.scss
@@ -51,7 +51,7 @@
         .coll {
             &__span {
                 display: block;
-                transition: transform 0.25s linear 0.25s;
+                transition: transform 0.25s ease-in 0.25s;
             }
             &__li {
                 display: block;
@@ -62,13 +62,13 @@
                 display: inline-block;
                 font-size: 35px;
                 padding: 50px 0;
-                transition: transform 0.75s linear;
+                transition: transform 0.75s ease-in;
             }
             &__name {
                 font-size: 22px;
                 padding-bottom: 35px;
                 display: block;
-                transition: transform 0.25s linear;
+                transition: transform 0.25s ease-in;
                 &--mobile {
                     display: none;
                 }
