--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -35,13 +35,14 @@
         line-height: 2;
         transition: all 1s ease;
         &:hover {
-            color: $color-mainYellow;
+            color: white;
         }
     }
     &__item {
-        transition: all 1s ease;
+        transition: all 0.75s ease;
         &:hover {
-            transform: rotateX(360deg) scale(1.4);
+            transform: rotateX(360deg) scale(1.3);
+            transform-origin: left;
         }
     }
 }
