add pattern to history and process sections

--- a/src/scss/_history.scss
+++ b/src/scss/_history.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 .history {
     width: 100%;
-    background: #f9f8f8;
+    background: url('../img/png/pattern.png');
     &__container {
         padding-top: 65px;
         padding-bottom: 65px;
