--- a/src/scss/_process.scss
+++ b/src/scss/_process.scss
@@ -1,8 +1,8 @@
 @import 'variables';
 
 .process {
-    background-color: $color-process;
+    background: url('../img/png/pattern.png');
     &__content {
-        background-image: url("../img/svg/big_pic/map.svg");
+        // background-image: url("../img/svg/big_pic/map.svg");
     }
 }
