--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
 @import 'header';
 @import 'welcome';
 @import 'services';
+@import 'process';
 @import 'features';
 @import 'packages';
 @import 'history';
